# SVO-7Semestr

./: CMakeLists.txt  main.cpp  visualize.cpp
DZ2/DZ SVT 2/practicum_2025_autumn-master/data/: polymesh1.vtk  polymesh2.vtk  polymesh3.vtk  polymesh4.vtk  polymesh5.vtk
DZ2/DZ SVT 2/practicum_2025_autumn-master/src/: CMakeLists.txt  diffusion_fem.cpp
src/: solver.cpp
